--- a/scss/style.scss
+++ b/scss/style.scss
@@ -938,9 +938,9 @@ body{
 		background-position: center;
 		background-size: contain;
 		background-repeat: no-repeat;
-		background-image: url(../img/__67.png);
-		&_2{background-image: url(../img/__74.png);}
-		&_3{background-image: url(../img/__79.png);}
+		background-image: url(../img/67.png);
+		&_2{background-image: url(../img/74.png);}
+		&_3{background-image: url(../img/79.png);}
 	}
 	&__col-title {
 		font-family: Raleway;
