--- a/css/style.css
+++ b/css/style.css
@@ -396,15 +396,15 @@ body {
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  background-image: url(../img/__67.png);
+  background-image: url(img/__67.png);
 }
 
 .easy__col-image_2 {
-  background-image: url(../img/__74.png);
+  background-image: url(img/__74.png);
 }
 
 .easy__col-image_3 {
-  background-image: url(../img/__79.png);
+  background-image: url(img/__79.png);
 }
 
 .easy__col-title {
